# AirSteady

./: .gitignore  AirSteady.bat  CMakeLists.txt  LICENSE  PROJECT_INTRO.md  README.md  blog.md  build.bat  deploy.bat  deploy_trial.bat  requirements.txt  vcpkg.json
AirSteady/: CMakeLists.txt  vcpkg.json
AirSteady/algorithm/: previewer.cpp  previewer.h  processor.h  stabilizer.cpp  tracker.cpp  tracker.h  video_preprocessor.cpp  video_preprocessor.h
AirSteady/common/: file_utils.hpp  types.h
AirSteady/ui/: contact_dialog.cpp  export_dialog.cpp  main_window.hpp  readme_dialog.cpp  readme_dialog.hpp
AirSteady/yolo/: letterbox.cpp  nms.h  ort_backend.cpp  ort_backend.h  postprocess.h  yolo_seg_detector.cpp  yolo_seg_detector.h
algorithm/: GPT.cpp  air_steady.py  previewer.cpp  previewer.h  processor.cpp  processor.h  seg_detector_worker.cpp  seg_detector_worker.h  stabilizer.cpp  stabilizer.h  tracker.cpp  tracker.h  video_exportor.cpp  video_exportor.h  video_preprocessor.cpp  video_preprocessor.h
cmake/: FetchOrtDml.cmake
common/: file_utils.cpp  file_utils.hpp  types.h
core/: algorithm.py  asset_loader.py  encrypt_assets.py  license_guard.py  main copy.py  main.py  utils.py  version_info.py
core/model/: tracker.yaml
exe/: main.cpp
scripts/: compress_video.bat  compress_video.sh  generate_thumbnails.sh
tools/: merge_two_videos.bat  merge_two_videos.py
train/: create_labelimg_launcher_shortcut.bat  cur.bat  extract_and_prelabel.bat  extract_and_prelabel.py  full_dataset.yaml  label.bat  label_pipeline_gui.py  labelimg_launcher.py  prelabel_and_label.bat  run_label_tool.bat  sample_dataset.yaml  split_dataset.bat  split_dataset.py  train.bat
ui/: contact_dialog.hpp  control_panel.cpp  control_panel.hpp  export_dialog.cpp  export_dialog.hpp  main_window.cpp  main_window.hpp  video_view.cpp  video_view.hpp
yolo/: letterbox.h  nms.cpp  postprocess.cpp  time_utils.h  yolo_seg_detector.cpp  yolo_seg_detector.h  yolo_types.h
